--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,8 @@ jobs:
       run: mvn clean
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Log git info
+      run: git branch
     - name: Test with Maven
       run: mvn test
       env:
