--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,9 +19,10 @@ jobs:
       run: |
         git branch
         echo git branch
-        echo ${{ env.GITHUB_REF_SLUG }}
-        echo ${{ env.GITHUB_HEAD_REF_SLUG }}
-        echo ${{ env.GITHUB_BASE_REF_SLUG }}
+        echo ${{ github }}
+        echo ${{ GITHUB_REF}}
+        echo ${{ GITHUB_HEAD_REF }}
+        echo ${{ GITHUB_BASE_REF }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Test with Maven
