--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,6 @@
 name: Java CI
 
-on: [push, pull_request, repository_dispatch]
+on: [pull_request]
 
 jobs:
   build:
@@ -20,6 +20,7 @@ jobs:
         git branch
         echo ${{ github }}
         git remote -v
+        git remote set-url --push pirvate https://msnmz:$GITHUB_TOKEN@github.com/msnmz-actions-private-tests-java
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Test with Maven
@@ -27,18 +28,3 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_CONTEXT: ${{ toJson(github) }}
-  
-  ping-pong:
-    runs-on: [ubuntu-latest]
-    steps:
-      - name: PING - Dispatch initiating repository event
-        if: github.event.action != 'pong'
-        run: |
-          curl -X POST https://api.github.com/repos/msnmz/msnmz-actions-private-tests-java/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
-      - name: ACK - Acknowledge pong from remote repository
-        if: github.event.action == 'pong'
-        run: |
-          echo "PONG received from '${{ github.event.client_payload.repository }}'"
