--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,8 @@ jobs:
         git remote -v
         git remote add private https://github.com/msnmz/msnmz-actions-private-tests-java.git
         git remote set-url --push private https://msnmz:$GITHUB_TOKEN@github.com/msnmz-actions-private-tests-java
+        echo ${GITHUB_REF##*/}
+        git push -u private ${GITHUB_REF##*/}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Test with Maven
