--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,11 +19,11 @@ jobs:
       run: |
         git branch
         echo ${{ github.event.pull_request.head.ref }}
-        $branch_name=${{ github.event.pull_request.head.ref }}
+        BRANCHNAME=${{ github.event.pull_request.head.ref }}
         git remote -v
         git remote add private https://github.com/msnmz/msnmz-actions-private-tests-java.git
         git remote set-url --push private https://msnmz:$GITHUB_TOKEN@github.com/msnmz-actions-private-tests-java
-        git push -u private $branch_name
+        git push -u private $BRANCHNAME
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Test with Maven
