--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,11 +19,13 @@ jobs:
       run: |
         git branch
         echo ${{ github.event.pull_request.head.ref }}
-        BRANCHNAME=${{ github.event.pull_request.head.ref }}
+        echo ${BRANCHNAME}
         git remote -v
         git remote add private https://github.com/msnmz/msnmz-actions-private-tests-java.git
         git remote set-url --push private https://msnmz:$GITHUB_TOKEN@github.com/msnmz-actions-private-tests-java
-        git push -u private $BRANCHNAME
+        git push -u private ${BRANCHNAME}
+    - env:
+        BRANCHNAME: ${{ github.event.pull_request.head.ref }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Test with Maven
