--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
         echo ${BRANCHNAME}
         git remote -v
         git remote add private https://github.com/msnmz/msnmz-actions-private-tests-java.git
-        git remote set-url --push private https://msnmz:$GITHUB_TOKEN@github.com/msnmz-actions-private-tests-java
+        git remote set-url private https://msnmz:$GITHUB_TOKEN@github.com/msnmz-actions-private-tests-java
         git remote -v
         git checkout ${BRANCHNAME}
         git push -u private HEAD:${BRANCHNAME}
