--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         git remote set-url private https://msnmz:${GITKEY}@github.com/msnmz/msnmz-actions-private-tests-java
         git remote -v
         git checkout ${BRANCHNAME}
-        git push -u private HEAD:${BRANCHNAME}
+        git push -u private HEAD:-homework${BRANCHNAME}
       env:
         BRANCHNAME: ${{ github.event.pull_request.head.ref }}
         GITKEY: ${{secrets.PASS_FOR_GIT}}
